Fixed z-index of background 2

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,10 @@ html, body {
   height: 100%;
 }
 
-/* Cross-browser wallpaper */
+/* Cross-browser background image */
 img {
+  z-index: -1;
+
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
